# wittyhub

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  config.yaml  pyproject.toml  skills_output.json
api/: main.py
api/models/: models.py  repository.py
api/routes/: agents.py  index.py  skills.py
api/schemas/: skill.py
api/services/: security.py
cli/: client.py  main.py
core/: config.py  database.py
deploy/docker/: Dockerfile  config.docker.yaml  config.yaml  docker-compose.yaml  embedding.Dockerfile  embedding_service.py  init.sql  nginx.conf
doc/agent/: agent-detail-design.md  agent-implementation-plan.md  测试验证.md
doc/design/: skill-scanner.md  skillhub-implementation-plan.md  skillhub-requirement-design.md
indexer/: search.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_audit_version_columns.py  003_add_embedding_column.py  004_skill_source_repos.py
scripts/: crawler.py  fix_skill_ids.py  generate_test_data.py  import_skills.py  import_voltagent.py  init_db.sh  insert_mock_data.py  mock_data.py  populate_skills.py  skill_registry.json  test_import_one.py
security/: detector.py
src/ai/: embedding.py
src/api/: main.py
src/core/: config.py  database.py
src/indexer/: search.py
src/migrations/: env.py  (+3 more)
storage/: downloader.py
tests/: conftest.py  test_agents_api.py  test_api.py  test_embedding.py  test_index_api.py  test_repository.py  test_schemas.py  test_skill_repository.py  test_skills_api.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+35 files in other folders)
